<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/costo_de_servicio"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:autofillHints="300"
        android:hint="@string/costo_del_servicio_text"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pregunta_servicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_fue_el_servicio_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/costo_de_servicio" />

    <RadioGroup
        android:id="@+id/opciones_propina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/opcion_veinte_porciento"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pregunta_servicio">

        <RadioButton
            android:id="@+id/opcion_veinte_porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorprendente_20" />

        <RadioButton
            android:id="@+id/opcion_diesiocho_porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buena_18" />

        <RadioButton
            android:id="@+id/opcion_quince_porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15" />
    </RadioGroup>

    <Switch
        android:id="@+id/rendondeo_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/redondear_propina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opciones_propina" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rendondeo_switch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto_de_propina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular" />
</androidx.constraintlayout.widget.ConstraintLayout>